// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RootApp should render correctly - no data 1`] = `
<div
  class="pf-c-drawer__content"
  data-ouia-safe="true"
  id="chrome-app-render-root"
>
  <div
    class="pf-c-page"
  >
    <header
      class="pf-c-page__header"
    >
      <div
        class="pf-c-page__header-brand"
      >
        <div
          class="pf-c-page__header-brand-link"
        >
          <a
            class="ins-c-header-link"
            href="./"
          >
            <img
              alt="Red Hat Logo"
              src="test-file-stub"
            />
          </a>
        </div>
      </div>
      <div
        class="pf-c-page__header-tools"
      >
        <button
          aria-disabled="false"
          aria-label="Toggle primary navigation"
          class="pf-c-button pf-m-tertiary"
          data-ouia-component-id="top-right-login-button"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
          widget-type="InsightsNavToggle"
        >
          Log in
        </button>
      </div>
    </header>
    <main
      class="pf-c-page__main"
      tabindex="-1"
    >
      <div
        class="ins-c-render ins-m-full--height"
      >
        <main
          class="pf-c-page__main"
          id="no-access"
        />
      </div>
    </main>
  </div>
</div>
`;

exports[`RootApp should render correctly 1`] = `
<div
  class="pf-c-drawer__content"
  data-ouia-app-id="app-id"
  data-ouia-bundle="some-location"
  data-ouia-safe="true"
  data-ouia-subnav="some-app"
  id="chrome-app-render-root"
>
  <div
    class="pf-c-page"
  >
    <header
      class="pf-c-page__header"
    >
      <div
        class="pf-c-page__header-brand"
      >
        <div
          class="pf-c-page__header-brand-link"
        >
          <a
            class="ins-c-header-link"
            href="./"
          >
            <img
              alt="Red Hat Logo"
              src="test-file-stub"
            />
          </a>
        </div>
      </div>
      <div
        class="pf-c-page__header-tools"
      >
        <button
          aria-disabled="false"
          aria-label="Toggle primary navigation"
          class="pf-c-button pf-m-tertiary"
          data-ouia-component-id="top-right-login-button"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
          widget-type="InsightsNavToggle"
        >
          Log in
        </button>
      </div>
    </header>
    <main
      class="pf-c-page__main"
      tabindex="-1"
    >
      <div
        class="ins-c-render ins-m-full--height"
      >
        <main
          class="pf-c-page__main"
          id="no-access"
        />
      </div>
    </main>
  </div>
</div>
`;

exports[`RootApp should render correctly with pageAction 1`] = `
<div
  class="pf-c-drawer__content"
  data-ouia-app-id="app-id"
  data-ouia-bundle="some-location"
  data-ouia-page-type="some-action"
  data-ouia-safe="true"
  data-ouia-subnav="some-app"
  id="chrome-app-render-root"
>
  <div
    class="pf-c-page"
  >
    <header
      class="pf-c-page__header"
    >
      <div
        class="pf-c-page__header-brand"
      >
        <div
          class="pf-c-page__header-brand-link"
        >
          <a
            class="ins-c-header-link"
            href="./"
          >
            <img
              alt="Red Hat Logo"
              src="test-file-stub"
            />
          </a>
        </div>
      </div>
      <div
        class="pf-c-page__header-tools"
      >
        <button
          aria-disabled="false"
          aria-label="Toggle primary navigation"
          class="pf-c-button pf-m-tertiary"
          data-ouia-component-id="top-right-login-button"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
          widget-type="InsightsNavToggle"
        >
          Log in
        </button>
      </div>
    </header>
    <main
      class="pf-c-page__main"
      tabindex="-1"
    >
      <div
        class="ins-c-render ins-m-full--height"
      >
        <main
          class="pf-c-page__main"
          id="no-access"
        />
      </div>
    </main>
  </div>
</div>
`;

exports[`RootApp should render correctly with pageObjectId 1`] = `
<div
  class="pf-c-drawer__content"
  data-ouia-app-id="app-id"
  data-ouia-bundle="some-location"
  data-ouia-page-object-id="some-object-id"
  data-ouia-safe="true"
  data-ouia-subnav="some-app"
  id="chrome-app-render-root"
>
  <div
    class="pf-c-page"
  >
    <header
      class="pf-c-page__header"
    >
      <div
        class="pf-c-page__header-brand"
      >
        <div
          class="pf-c-page__header-brand-link"
        >
          <a
            class="ins-c-header-link"
            href="./"
          >
            <img
              alt="Red Hat Logo"
              src="test-file-stub"
            />
          </a>
        </div>
      </div>
      <div
        class="pf-c-page__header-tools"
      >
        <button
          aria-disabled="false"
          aria-label="Toggle primary navigation"
          class="pf-c-button pf-m-tertiary"
          data-ouia-component-id="top-right-login-button"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
          widget-type="InsightsNavToggle"
        >
          Log in
        </button>
      </div>
    </header>
    <main
      class="pf-c-page__main"
      tabindex="-1"
    >
      <div
        class="ins-c-render ins-m-full--height"
      >
        <main
          class="pf-c-page__main"
          id="no-access"
        />
      </div>
    </main>
  </div>
</div>
`;

exports[`RootApp should render correctly with pageObjectId and pageAction 1`] = `
<div
  class="pf-c-drawer__content"
  data-ouia-app-id="app-id"
  data-ouia-bundle="some-location"
  data-ouia-page-object-id="some-object-id"
  data-ouia-page-type="some-action"
  data-ouia-safe="true"
  data-ouia-subnav="some-app"
  id="chrome-app-render-root"
>
  <div
    class="pf-c-page"
  >
    <header
      class="pf-c-page__header"
    >
      <div
        class="pf-c-page__header-brand"
      >
        <div
          class="pf-c-page__header-brand-link"
        >
          <a
            class="ins-c-header-link"
            href="./"
          >
            <img
              alt="Red Hat Logo"
              src="test-file-stub"
            />
          </a>
        </div>
      </div>
      <div
        class="pf-c-page__header-tools"
      >
        <button
          aria-disabled="false"
          aria-label="Toggle primary navigation"
          class="pf-c-button pf-m-tertiary"
          data-ouia-component-id="top-right-login-button"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          type="button"
          widget-type="InsightsNavToggle"
        >
          Log in
        </button>
      </div>
    </header>
    <main
      class="pf-c-page__main"
      tabindex="-1"
    >
      <div
        class="ins-c-render ins-m-full--height"
      >
        <main
          class="pf-c-page__main"
          id="no-access"
        />
      </div>
    </main>
  </div>
</div>
`;
